# OrderMarkers

./: CMakeLists.txt  OrderDetection.cpp  README.md  pruebacamara.cpp
Cima/: CMakeLists.txt  PruebaHomo.py  displayimage.cpp
Cima/include/homography/: matrices.h
Cima/include/marker/: follow.h  reconoce.h
Cima/lib/homography/: eigen.cc  homografia.cc  matrices.cc
Cima/lib/marker/: follow.cc
DatosPS3/: cameraDistortion.txt  cameraMatrix.txt
img/M0OT/: Datos
img/M1OT/: Datos
include/homography/: eigen.h  homografia.h
include/marker/: lambdaMatrix.h  triangles.h
include/procesa/: procesa.h  procesaRobot.h
lib/homography/: homografia.cc
lib/marker/: lambdaMatrix.cc  reconoce.cc  triangles.cc
lib/procesa/: procesa.cpp  procesaRobot.cpp
